--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,42 +1,32 @@
 name: Generate SVGs
-
 on:
   schedule:
-    - cron: "58 23 * * *" 
+    - cron: "58 23 * * *"
   workflow_dispatch:
-
 jobs:
   generate:
-    permissions: 
+    permissions:
       contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 1
-    
     steps:
       - uses: actions/checkout@v4
         with:
           ref: raw
-
-      # generates a snake game from a github user (visnowden) contributions graph, output a svg animation at <svg_out_path>
-      - name: generate gh_snk.svg
+      - name: generate svg
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
             snk/gh_snk_dark.svg?palette=github-dark
             snk/gh_snk.svg
-          
       - name: linux
         run: |
-          echo ls -la
           ls -la
-          echo
-      # push the content of <build_dir> to a branch
-      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
-      - name: push gh_snk.svg to the output branch
+      - name: push svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           commit_message: snake update
+          committer: visnowden
           target_branch: raw
           build_dir: .
         env:
