--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -4,6 +4,11 @@ on:
   schedule:
     - cron: "3 0 * * *"
   workflow_dispatch:
+    inputs:
+      branch:
+        description: "Select the branch to run the workflow"
+        default: "main"
+        required: true
 
 jobs:
   compare_and_update:
