--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -7,7 +7,7 @@ on:
     inputs:
       branch:
         description: "Select the branch to run the workflow"
-        default: "main"
+        default: "raw"
         required: true
 
 jobs:
