--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r .github/workflows/streak/requirements.txt
+        pip install -r raw/.github/workflows/streak/requirements.txt
 
     - name: Run Python script
-      run: python .github/workflows/streak/compare_update.py
+      run: python raw/.github/workflows/streak/compare_update.py
