--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r .github/workflows/streak/requirements.txt
+        pip install -r requests
 
     - name: Run Python script
       run: python .github/workflows/streak/compare_update.py
