--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        branch: main
 
     - name: Set up Python
       uses: actions/setup-python@v5
