--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        branch: main
+        ref: main
 
     - name: Set up Python
       uses: actions/setup-python@v5
