--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -16,6 +16,8 @@ jobs:
       uses: actions/checkout@v4
       with:
         ref: raw
+    - name: listing the files
+      run: ls -la
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
