--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -15,12 +15,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
+        fetch-depth: 0
         ref: raw
     - name: listing the files
       run: ls -la
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
+        fetch-depth: 0
         ref: main
 
     - name: Set up Python
