--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -21,8 +21,8 @@ jobs:
 
     # - name: Move the files
     #   run: |
-    #     mkdir temp/
-    #     mv ./.github/workflows/compare_update.py ./temp/
+    #     mkdir raw_branch_files/
+    #     mv ./.github/workflows/compare_update.py ./raw_branch_files/
 
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -33,8 +33,8 @@ jobs:
     - name: Move the files
       run: |
         ls -la
-        ls -la ./temp/
-    #     mv ./temp/* ./s
+    # ls -la ./raw_branch_files/
+    #     mv ./raw_branch_files/* ./s
 
     - name: Set up Python
       uses: actions/setup-python@v5
