--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -51,6 +51,8 @@ jobs:
 
     - name: Commiting
       run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
         git add test.txt
         git commit -m "Changes by script"
         git push origin main
