--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -53,6 +53,6 @@ jobs:
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
-        git add test.txt
+        git add README.md
         git commit -m "Changes by script"
         git push origin main
